cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_130.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_ecb.c:32: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_ecb.c:32:5: Write of unused value
30.       n2l(in, l);
31.       d[0] = l;
32.       n2l(in, l);
          ^
33.       d[1] = l;
34.       if (encrypt)
